feat: add agent session transcript modal
- Add /api/polecat/:rig/:name/transcript endpoint in server.js
- Searches for Claude session files in .claude/sessions and .claude/transcripts
- Add getAgentTranscript API client method
- Add Transcript button to peek modal
- Add showAgentTranscript handler in modals.js
- Display Claude session transcripts and tmux output
- Add comprehensive CSS styles for transcript modal

--- a/gui/index.html
+++ b/gui/index.html
@@ -758,6 +758,10 @@
             <button class="btn btn-sm btn-secondary" id="peek-refresh" title="Refresh output">
               <span class="material-icons">refresh</span>
             </button>
+            <button class="btn btn-sm btn-secondary" id="peek-transcript" title="View full transcript">
+              <span class="material-icons">article</span>
+              Transcript
+            </button>
             <label class="peek-auto-refresh">
               <input type="checkbox" id="peek-auto-refresh-toggle">
               Auto-refresh
